<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".Add_gernote">


    <TextView
        android:id="@+id/textview_Agrega_nueva_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/textview_Agrega_nueva_nota"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25dip"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/textview_Agregar_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/textview_Agregar_titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18dp"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/Edit_text_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#88FFFF"
        android:hint="@string/Edit_text_titulo"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/textview_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/textview_descripcion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18dp"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/edittext_descripcion"
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#88FFFF"
        android:hint="@string/edittext_descripcion"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/button_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#009FAF"
        android:text="@string/button_agregar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />


</LinearLayout>
